versions/v4.4.45/MANIFEST.md
# v4.4.45 Manifest

## Changed Files

- `automation/ws63/tools/ws63_auto_burn.py`
- `automation/ws63/tests/test_ws63_auto_burn.py`
- `scripts/ws63_flash_team.sh`
- `scripts/ws63_build_v4_ubuntu.sh`
- `xc/ws63_team_network/src/ws63_team_network_app.c`
- `webui/tests/ws63-api-contract.test.mjs`
- `README.md`
- `versions/README.md`
- `versions/v4.4.45/VERSION.md`
- `versions/v4.4.45/MANIFEST.md`

## Key Deltas

1. Added direct Python burn stale-package guard.
2. Kept shell flash stale-package guard aligned with `v4.4.45`.
3. Updated visible firmware/build guard strings to `v4.4.45`.

## Verification

Pending final run after this version bump:

```sh
python -m unittest automation.ws63.tests.test_ws63_auto_burn automation.ws63.tests.test_ws63_link_cycle_test
python automation\ws63\tools\ws63_auto_burn.py -p COM13 --no-auto-reset --expected-version v4.4.45 output_from_vm\team_network_v4_unified_runtime_role\ws63-liteos-app_v4_unified_all.fwpkg
bash scripts/ws63_flash_team.sh --yes unified /dev/null
bash -lc "cc -Wall -Werror -I/mnt/e/codex_documents/sle/include /mnt/e/codex_documents/sle/examples/team_node_regression_test.c /mnt/e/codex_documents/sle/src/sle_team_packet.c /mnt/e/codex_documents/sle/src/sle_team_node.c -o /tmp/team_node_regression_test && /tmp/team_node_regression_test"
bash scripts/simulate_v2.sh --suite=all --iterations=1
bash automation/ws63/scripts/ws63_test_system.sh --quick
npm --prefix webui test
npm --prefix webui run build
git diff --check
```

Live validation remains blocked until a real `v4.4.45` package is built. The currently available local package contains `v4.4.37` and should be refused by both burn entry points.
